--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
     ],
     "require": {
         "php": "^7.3|^8.0",
-        "illuminate/filesystem": "^8.0|^9.0",
-        "illuminate/support": "^8.0|^9.0"
+        "laravel/framework": "10.*"
     },
     "autoload": {
         "psr-4": {
